<resources>
    <string name="app_name">Admin Fútbol 8 Alem</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act__registrar_equipo">Registrar Equipo</string>
    <string name="registrarEquipo">Registrar Equipo</string>
    <string name="seleccionarfecha">Seleccionar fecha</string>
    <string name="nombreEquipo">Nombre del Equipo</string>
    <string name="a">a</string>
    <string name="Fechadeinicio">Fecha de Inicio del Equipo</string>
    <string name="direccionCancha">Dirección de cancha</string>
    <string name="saleccionarTipoDeEquipo">Seleccionar el tipo de equipo:</string>
    <string name="title_activity_act__crear_partido">Partido Nuevo</string>
    <string name="vs">vs</string>
    <string name="seleccionarHora">Seleccionar hora</string>
    <string name="seleccionarCancha">Cancha de:</string>
    <string name="otraDireccion">Otra dirección</string>
    <string name="agregarPartido">Crear partido</string>
    <string name="selacciobarEquios">Seleccionar equipos</string>
    <string name="selaccionarFechaDeEncuentro">Seleccionar fecha:</string>
    <string name="selaccionarHoraDeEncuentro">Seleccionar hora de encuentro</string>
    <string name="title_activity_act_partidos">Partidos</string>
    <string name="partidos">Partidos</string>
    <string name="crearPartido">Crear Partido</string>
    <string name="finalizarPartido">Finalizar Partido</string>
    <string name="equipoLocal">Equipo Local</string>
    <string name="equipoVisitante">Equipo visitante</string>
    <string name="hora">hora:</string>
    <string name="canchaDe">Cancha de:</string>
    <string name="title_activity_act__partido__a_finalizar">Modificar resultados</string>
    <string name="nombreDato">nombreDato</string>
    <string name="valorDato">ValoreDato</string>
    <string name="subtitulo">Subtitulo</string>
    <string name="modificarPartido">Modificar Partido</string>
    <string name="title_activity_act__principal">Admin Fútbol 8 Alem</string>
    <string name="administrarLibres">Administrar Libres</string>
    <string name="administrarVeteranos">Administrar Veteranos</string>
    <string name="title_activity_act_finalizar_partido">Act_finalizarPartido</string>
    <string name="goles">Goles</string>
    <string name="colocarResultados">Colocar Resultado</string>
    <string name="title_activity_equipos">Equipos</string>
    <string name="title_activity_act__equipos">Act_Equipos</string>
    <string name="equipo">Equipo</string>
    <string name="title_activity_act_un_equipo">Act_unEquipo</string>
    <string name="anadirEquipo">añadir</string>
    <string name="anadirEquipoa">Añadir Equipo</string>
    <string name="equipos">Equipos</string>
    <string name="datosDelEquipo">Datos del Equipo</string>
    <string name="FechaInicio">Fecha inicio:</string>
    <string name="registradoEl">Registrado el:</string>
    <string name="direccion">Dirección:</string>
    <string name="añadirPartido">Añadir Partido</string>
    <string name="title_activity_act__resultados">Act_Resultados</string>
    <string name="title_activity_act_un_resultado">Act_unResultado</string>
    <string name="fecha">fecha</string>
    <string name="golL">golL</string>
    <string name="golV">golV</string>
    <string name="datosDelPartido">Datos del partido</string>
    <string name="partidosFinalizados">Partidos Finalizados</string>
    <string name="operaciones">Operaciones</string>
    <string name="eliminarPartido">Eliminar Partido</string>
    <string name="modificarResultado">Modificar Resultados</string>



    <!-- 0000000000000000 String utilizados en logica
        Partido-->
    <string name="LG_partidoEliminado">Partido eliminado</string>
    <string name="LG_noSePudiEliminarPartido">No se ha podido eliminar el partido</string>
    <string name="LG_partidoCreado">Partido creado correctamente</string>
    <string name="LG_noSeCreoElPartio">No se ha podido crear el Partido</string>
    <string name="LG_partidoModificado">Partido modificado</string>
    <string name="LG_noSePudoModificar">No se ha podido realizar la modificación</string>
    <string name="LG_partidoFinalizado">Partido finalizado</string>
    <string name="LG_noSePudoFinalizarElPartido">No se ha podido finalizar el partido</string>

    <!--Equipo-->
    <string name="LG_equipoRegistrado">Equipo registrado</string>
    <string name="LG_noSePudoRegistrarEquipo">No se ha podido registrar el equipo</string>
    <string name="LG_equipoModificado">Equipo modificado</string>
    <string name="LG_equipoEliminado">Equipo Eliminado</string>
    <string name="LG_noEliminadoEquipo">No se ha podido eliminar el equipo</string>

    <!-- Otros -->
    <string name="LG_errorDeConexion">Error de conexión</string>
    <string name="LG_errorDeConexionDesliceHaciaAbajo">Error de conexión. Deslizar hacia abajo para Actualizar</string>
    <string name="LG_resultadoModificado">Resultado modificado</string>
    <string name="LG_debeColocarDireccionCancha">Debe colocar la dirección de la cancha</string>
    <string name="LG_debeSeleccinarEquipoLocal">Debe seleccionar el equipo local</string>
    <string name="LG_debeSaleccionarLosEquiposDelPartido">Debe seleccionar los equipos del partido</string>
    <string name="LG_espereUnosSegundos">Espere unos segundos...</string>
    <string name="LG_finalizarPartido">Finalizar partido</string>
    <string name="LG_cargandoResultados">Cargando resultados...</string>
    <string name="LG_debeColocarLosGolesEnAmbosPartidos">Debe colocar los goles de ambos partidos</string>
    <string name="LG_cargando">Cargando...</string>
    <string name="LG_resultadosDePartidos">Resultados de partidos</string>
    <string name="LG_cargandoPartidos">Cargando partidos...</string>
    <string name="LG_advertenciaEliminarPartido">Estas seguro que deseas Eliminar éste partido</string>
    <string name="LG_advertenciaEliminarEquipo">Estas seguro que deseas Eliminar éste Equipo</string>
    <string name="LG_eliminando">Eliminando...</string>
    <string name="RealizarBusquedaPorEquipo">Realizar la búsqueda por equipo</string>
    <string name="buscar">Buscar</string>
    <string name="RealizarBusquedaPorFecha">Realizar la búsqueda por fecha</string>
    <string name="buscarPartidos">Buscar Partidos</string>
    <string name="title_activity_act__busqueda_partidos">Búsqueda</string>
    <string name="telefono">Teléfono</string>
    <string name="modificar_datos">Modificar datos partidos</string>
    <string name="visible">Visible</string>
    <string name="no_visible">No Visible</string>
    <string name="visible_dosPuntod">Visible:</string>


</resources>
