<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/icon"/>

            <Button
                style="@style/BTN_gral"
                android:text="@string/equipos"
                android:id="@+id/BTN_ini_registrarEquipo"
                android:onClick="irEquiposOnClick"/>

            <Button
                style="@style/BTN_gral"
                android:text="@string/partidos"
                android:id="@+id/BTN_ini_crearPartido"
                android:onClick="irPartidosOnClick"/>

            <Button
                style="@style/BTN_gral"
                android:text="@string/partidosFinalizados"
                android:id="@+id/BTN_ini_finalizarPartido"
                android:onClick="finalizarPartidoOnClick"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
